# aiTrainer

./: .gitignore  README.md  pyproject.toml
aicoach/: __init__.py  config.py  db.py  progress.py  repository.py  server.py
examples/: openclaw-mcp-snippet.json
prompts/: coach_instructions.md
scripts/: mcp_smoke_test.py
tests/: conftest.py  test_mutations.py  test_progress.py  test_repository.py  test_server.py
