[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aicoach"
version = "0.1.0"
description = "Personal workout coach MCP server for OpenClaw"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
aicoach-mcp = "aicoach.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["aicoach*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
